docs: further content restructuring

--- a/Things/Industries/[Sector]/[SubSector]/[IndustryGroup]/[Industry]/[Industry].mdx
+++ b/Things/Industries/[Sector]/[SubSector]/[IndustryGroup]/[Industry]/[Industry].mdx
@@ -1,6 +1,6 @@
 ---
 $type: https://schema.org.ai/Industry
-$id: https://industries.org.ai/{name}
+$id: https://platform.do/Industries/{name}
 typeOf: https://industries.org.ai/{typeOf}
 ---
 
@@ -11,7 +11,7 @@ export const schema = z.object({
 
 <Breadcrumbs/>
 
-# {IndustryName}
+# {name}
 
 {description}
 
